src/main/kotlin/com/example/helloworld/global/error/ErrorResponse.kt
package com.example.helloworld.global.error

import org.springframework.http.HttpStatus


class ErrorResponse(errorCode: ErrorCode) {
    val code: Int
    val msg: String

    init{
        code = errorCode.code
        msg = errorCode.msg
    }
}